overflow fixed

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -5,8 +5,26 @@
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 
+.banner-bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.banner .container {
+  padding: 260px 0 100px 0;
+  position: relative;
+  z-index: 1;
+}
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -22,7 +40,6 @@
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
-  height: 8rem;
   margin-bottom: 20px;
   display: block;
 }
@@ -40,7 +57,6 @@
   color: #fff;
   font-weight: 700;
   font-size: 20px;
-  margin-top: 60px;
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
